2009-12-29  Michiel Roos <michiel@netcreators.com>
	* Feature: #12408: Integrate flash uploader into DAM (Thanks to Dan Osipov)

2009-12-21  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #9830: Not responing queries using category selections (Thanks to Peter Kuehn)

2009-12-20  Michiel Roos <michiel@netcreators.com>
	* Fixed #12028: All trees stop working if using TYPO3 4.3. trunk (Thanks to Georg Ringer)

2009-12-13  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #12495: ereg_* functions deprecated in PHP 5.3 (Thanks to Dan Osipov)
	* Fixed bug #12856: Stage two of indexing process lists Dry Run (Thanks to Dan Osipov)
	* Fixed bug #13017: tablename field in tx_dam_mm_ref to short (extbase) (Thanks to Thomas Kieslich)
	* Fixed #11978: echo $GLOBALS['TYPO3_DB']->sql_error(); (Thanks to Dan Osipov)
	* Fixed #13033: Unknow modifier '/' in element browser  (Thanks to Chris Mueller)

2009-10-11  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #10278: Usage of choices is limited to 100  (Thanks to Bernd Schuhmacher)
	* Fixed bug #11388: MSIE 8.0 Elementbrowser layout broken (Thanks to Georg Kuehnberger)
	* Fixed bug #11387: MSIE 8.0 module file upload tab problem (Thanks to Georg Kuehnberger)
	* Fixed bug #6110: Description Field in cat_edit (Thanks to Tobi)
	* Fixed bug #7654: Category sorting by title, not by "sorting" (Thanks to Michael Ablass)
	* Fixed bug #11854: wrong syntax in ext_tables.sql (Thanks to Guiso Kegel)
	* Fixed bug #11623: Remove deprecated assignments by reference when using "new" statement (Thanks to Andreas Wolf)
	* Fixed bug #11330: docheader in batch_edit mode lacks replacement of FOLDER_INFO, CLOSE and SAVE markers (Thanks to Georg Kuehnberger) 
	
2009-08-20  Michiel Roos <michiel@netcreators.com>

	* #11743: DAM doesn't respekt skin images (Thanks to Georg Ringer)
	* #11750: Title tag of elements in page module is unreadable (Thanks to Georg Ringer)

2009-07-03  Oliver Hader  <oliver@typo3.org>
